--- a/Horde3D/Bindings/C#/Source/Horde3D .NET/Horde3D_Properties.resx
+++ b/Horde3D/Bindings/C#/Source/Horde3D .NET/Horde3D_Properties.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -121,7 +121,7 @@
     <value>The parameter value is lesser than zero. Internally this value is represented by an unsigned integer.</value>
   </data>
   <data name="VersionString" xml:space="preserve">
-    <value>Horde3D 1.0.0</value>
+    <value>Horde3D 2.0.0</value>
   </data>
   <data name="MatrixOutOfRangeExceptionString" xml:space="preserve">
     <value>The parameter is not a 4x4 float matrix.</value>
